--- a/MuammarRizalPortfolio/index.html
+++ b/MuammarRizalPortfolio/index.html
@@ -196,6 +196,7 @@
                   Saya mahasiswa Universitas Indraprasta PGRI(Unindra) seorang individu yang teliti, pekerja keras, dan optimis yang mampu menyesuaikan diri dengan lingkungan yang dinamis, dengan pemahaman dan pendekatan yang melihat big
                   picture dari suatu masalah. Memiliki pengetahuan luas dalam bekerja sama dengan orang banyak dan kolaborasi proyek dengan berbagai tim dari latar belakang berbeda
                 </div>
+                <a class="btn btn-custom mt-3" href="#">Lihat Selengkapnya</a>
                 <div id="tab-content-2" class="container tab-pane fade">
                   <ul>
                     <li>Mempelajari hal baru setiap harinya</li>
@@ -534,86 +535,6 @@
     </div>
     <!-- Event End -->
 
-    <!-- Team Start -->
-    <div class="team">
-      <div class="container">
-        <div class="section-header text-center">
-          <h2>Tim Saya</h2>
-        </div>
-        <div class="row">
-          <div class="col-lg-3 col-md-6">
-            <div class="team-item">
-              <div class="team-img">
-                <img src="img/DSC03910.JPG" alt="Team Image" />
-              </div>
-              <div class="team-text">
-                <h2>Muammar Rizal</h2>
-                <p>Founder & CEO</p>
-                <div class="team-social">
-                  <a href="https://twitter.com/MmrRizal"><i class="fab fa-twitter"></i></a>
-                  <a href="https://www.facebook.com/muamar.rizal.9"><i class="fab fa-facebook-f"></i></a>
-                  <a href="https://github.com/MuammarRizal31"><i class="fab fa-github-square"></i></a>
-                  <a href="https://www.instagram.com/mmr_rizal/"><i class="fab fa-instagram"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="team-item">
-              <div class="team-img">
-                <img src="img/team-2.jpg" alt="Team Image" />
-              </div>
-              <div class="team-text">
-                <h2>Adam Phillips</h2>
-                <p>Chef Executive</p>
-                <div class="team-social">
-                  <a href=""><i class="fab fa-twitter"></i></a>
-                  <a href=""><i class="fab fa-facebook-f"></i></a>
-                  <a href=""><i class="fab fa-linkedin-in"></i></a>
-                  <a href=""><i class="fab fa-instagram"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="team-item">
-              <div class="team-img">
-                <img src="img/team-3.jpg" alt="Team Image" />
-              </div>
-              <div class="team-text">
-                <h2>Thomas Olsen</h2>
-                <p>Chef Advisor</p>
-                <div class="team-social">
-                  <a href=""><i class="fab fa-twitter"></i></a>
-                  <a href=""><i class="fab fa-facebook-f"></i></a>
-                  <a href=""><i class="fab fa-linkedin-in"></i></a>
-                  <a href=""><i class="fab fa-instagram"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="team-item">
-              <div class="team-img">
-                <img src="img/team-4.jpg" alt="Team Image" />
-              </div>
-              <div class="team-text">
-                <h2>James Alien</h2>
-                <p>Advisor</p>
-                <div class="team-social">
-                  <a href=""><i class="fab fa-twitter"></i></a>
-                  <a href=""><i class="fab fa-facebook-f"></i></a>
-                  <a href=""><i class="fab fa-linkedin-in"></i></a>
-                  <a href=""><i class="fab fa-instagram"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Team End -->
-
     <!-- Volunteer Start -->
     <div class="volunteer" data-parallax="scroll" data-image-src="img/volunteer.jpg">
       <div class="container">
@@ -655,86 +576,25 @@
     </div>
     <!-- Volunteer End -->
 
-    <!-- Testimonial Start -->
-    <div class="testimonial">
-      <div class="container">
-        <div class="section-header text-center">
-          <p>Testimonial</p>
-          <h2>Apa yang orang bicarakan tentang kegiatan pembelajaran kami</h2>
-        </div>
-        <div class="owl-carousel testimonials-carousel">
-          <div class="testimonial-item">
-            <div class="testimonial-profile">
-              <img src="img/mark.jfif" alt="Image" />
-              <div class="testimonial-name">
-                <h3>Mark Zuckerberg</h3>
-                <p>CEO Meta</p>
-              </div>
-            </div>
-            <div class="testimonial-text">
-              <p>Teruskan perkembangan mu anak muda,buat orang orang disekitarmu bahagia,keren kan aku bisa berbahasa indonesia hehehe</p>
-            </div>
-          </div>
-          <div class="testimonial-item">
-            <div class="testimonial-profile">
-              <img src="img/testimonial-2.jpg" alt="Image" />
-              <div class="testimonial-name">
-                <h3>Person Name</h3>
-                <p>Profession</p>
-              </div>
-            </div>
-            <div class="testimonial-text">
-              <p>Lorem ipsum dolor sit amet elit. Phasel preti mi facilis ornare velit non vulputa. Aliqu metus tortor, auctor id gravid vivera quis</p>
-            </div>
-          </div>
-          <div class="testimonial-item">
-            <div class="testimonial-profile">
-              <img src="img/testimonial-3.jpg" alt="Image" />
-              <div class="testimonial-name">
-                <h3>Person Name</h3>
-                <p>Profession</p>
-              </div>
-            </div>
-            <div class="testimonial-text">
-              <p>Lorem ipsum dolor sit amet elit. Phasel preti mi facilis ornare velit non vulputa. Aliqu metus tortor, auctor id gravid vivera quis</p>
-            </div>
-          </div>
-          <div class="testimonial-item">
-            <div class="testimonial-profile">
-              <img src="img/testimonial-4.jpg" alt="Image" />
-              <div class="testimonial-name">
-                <h3>Person Name</h3>
-                <p>Profession</p>
-              </div>
-            </div>
-            <div class="testimonial-text">
-              <p>Lorem ipsum dolor sit amet elit. Phasel preti mi facilis ornare velit non vulputa. Aliqu metus tortor, auctor id gravid vivera quis</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Testimonial End -->
-
     <!-- Contact Start -->
     <div class="contact">
       <div class="container">
         <div class="section-header text-center">
-          <p>Get In Touch</p>
-          <h2>Contact for any query</h2>
+          <p>Hubungi</p>
+          <h2>Hubungi kami jika ada yang ingin ditanyakan</h2>
         </div>
         <div class="contact-img">
-          <img src="img/contact.jpg" alt="Image" />
+          <img src="img/IMG_20190803_070748.jpg" alt="Image" />
         </div>
         <div class="contact-form">
           <div id="success"></div>
           <form name="sentMessage" id="contactForm" novalidate="novalidate">
             <div class="control-group">
-              <input type="text" class="form-control" id="name" placeholder="Your Name" required="required" data-validation-required-message="Please enter your name" />
+              <input type="text" class="form-control" id="name" placeholder="Nama" required="required" data-validation-required-message="Please enter your name" />
               <p class="help-block text-danger"></p>
             </div>
             <div class="control-group">
-              <input type="email" class="form-control" id="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email" />
+              <input type="email" class="form-control" id="email" placeholder="Email" required="required" data-validation-required-message="Please enter your email" />
               <p class="help-block text-danger"></p>
             </div>
             <div class="control-group">
@@ -742,11 +602,11 @@
               <p class="help-block text-danger"></p>
             </div>
             <div class="control-group">
-              <textarea class="form-control" id="message" placeholder="Message" required="required" data-validation-required-message="Please enter your message"></textarea>
+              <textarea class="form-control" id="message" placeholder="Pesan" required="required" data-validation-required-message="Please enter your message"></textarea>
               <p class="help-block text-danger"></p>
             </div>
             <div>
-              <button class="btn btn-custom" type="submit" id="sendMessageButton">Send Message</button>
+              <button class="btn btn-custom" type="submit" id="sendMessageButton">Kirim Pesan</button>
             </div>
           </form>
         </div>
@@ -754,74 +614,16 @@
     </div>
     <!-- Contact End -->
 
-    <!-- Blog Start -->
-    <div class="blog">
-      <div class="container">
-        <div class="section-header text-center">
-          <p>Our Blog</p>
-          <h2>Latest news & articles directly from our blog</h2>
-        </div>
-        <div class="row">
-          <div class="col-lg-4">
-            <div class="blog-item">
-              <div class="blog-img">
-                <img src="img/blog-1.jpg" alt="Image" />
-              </div>
-              <div class="blog-text">
-                <h3><a href="#">Lorem ipsum dolor sit</a></h3>
-                <p>Lorem ipsum dolor sit amet elit. Neca pretim miura bitur facili ornare velit non vulpte liqum metus tortor</p>
-              </div>
-              <div class="blog-meta">
-                <p><i class="fa fa-user"></i><a href="">Admin</a></p>
-                <p><i class="fa fa-comments"></i><a href="">15 Comments</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="blog-item">
-              <div class="blog-img">
-                <img src="img/blog-2.jpg" alt="Image" />
-              </div>
-              <div class="blog-text">
-                <h3><a href="#">Lorem ipsum dolor sit</a></h3>
-                <p>Lorem ipsum dolor sit amet elit. Neca pretim miura bitur facili ornare velit non vulpte liqum metus tortor</p>
-              </div>
-              <div class="blog-meta">
-                <p><i class="fa fa-user"></i><a href="">Admin</a></p>
-                <p><i class="fa fa-comments"></i><a href="">15 Comments</a></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="blog-item">
-              <div class="blog-img">
-                <img src="img/blog-3.jpg" alt="Image" />
-              </div>
-              <div class="blog-text">
-                <h3><a href="#">Lorem ipsum dolor sit</a></h3>
-                <p>Lorem ipsum dolor sit amet elit. Neca pretim miura bitur facili ornare velit non vulpte liqum metus tortor</p>
-              </div>
-              <div class="blog-meta">
-                <p><i class="fa fa-user"></i><a href="">Admin</a></p>
-                <p><i class="fa fa-comments"></i><a href="">15 Comments</a></p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Blog End -->
-
     <!-- Footer Start -->
     <div class="footer">
       <div class="container">
         <div class="row">
           <div class="col-lg-3 col-md-6">
             <div class="footer-contact">
-              <h2>Our Head Office</h2>
-              <p><i class="fa fa-map-marker-alt"></i>Location, City, Country</p>
-              <p><i class="fa fa-phone-alt"></i>+012 345 67890</p>
-              <p><i class="fa fa-envelope"></i>info@example.com</p>
+              <h2>My address</h2>
+              <p><i class="fa fa-map-marker-alt"></i>JL H.Kaisin RT04/004, Jakarta, Indonesia</p>
+              <p><i class="fa fa-phone-alt"></i>+62 896 3958 6047</p>
+              <p><i class="fa fa-envelope"></i>Muammarrizal2002@gmail.com</p>
               <div class="footer-social">
                 <a class="btn btn-custom" href="https://freewebsitecode.com"><i class="fab fa-twitter"></i></a>
                 <a class="btn btn-custom" href="https://facebook.com/freewebsitecode"><i class="fab fa-facebook-f"></i></a>
@@ -833,12 +635,18 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <div class="footer-link">
-              <h2>Popular Links</h2>
-              <a href="">About Us</a>
-              <a href="">Contact Us</a>
-              <a href="">Popular Causes</a>
-              <a href="">Upcoming Events</a>
-              <a href="">Latest Blog</a>
+              <h2>Frequently Visited</h2>
+              <ul>
+                <li>
+                  <a href="">Tentang</a>
+                </li>
+                <li>
+                  <a href="">Kontak</a>
+                </li>
+                <li>
+                  <a href="">Acara</a>
+                </li>
+              </ul>
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
@@ -855,9 +663,9 @@
             <div class="footer-newsletter">
               <h2>Newsletter</h2>
               <form>
-                <input class="form-control" placeholder="Email goes here" />
+                <input class="form-control" placeholder="Masukan emailmu disini" />
                 <button class="btn btn-custom">Submit</button>
-                <label>Don't worry, we don't spam!</label>
+                <label>Jangan khawatir, kami tidak melakukan spam!</label>
               </form>
             </div>
           </div>
@@ -866,10 +674,10 @@
       <div class="container copyright">
         <div class="row">
           <div class="col-md-6">
-            <p>&copy; <a href="https://freewebsitecode.com">Your Site Name</a>, All Right Reserved.</p>
+            <p>&copy; <a href="#">JangsPortfolio</a>, All Right Reserved.</p>
           </div>
           <div class="col-md-6">
-            <p>Designed By <a href="https://freewebsitecode.com">Free Website Code</a></p>
+            <p>Designed By <a href="#">Muammar Rizal</a></p>
           </div>
         </div>
       </div>
